2004-01-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/include/music-iterator.hh (class Music_iterator): add
	substitute_outlet() to iterator API.

	* lily/new-part-combine-iterator.cc (construct_children):
	New_pc_iterator: new class, better part combining.

	* lily/tie-column.cc (werner_directions): new function

	* lily/tie.cc (set_direction): call Tie_column::set_direction ()

	* lily/axis-group-engraver.cc (process_acknowledged_grobs): give
	empty objects group spanner as parent

	* lily/tuplet-bracket.cc (calc_position_and_height): check musical
	slope against graphical slope.

	* lily/ottava-bracket.cc (brew_molecule): support minimum-length
	for ottava bracket.

	* lily/side-position-interface.cc (general_side_position):
	opps. reinstate *dir.

	* lily/parser.yy: plug many memory leaks. We're down to 4 for each
	parser run.

	* lily/tuplet-bracket.cc: remove calc_dy ().

	* Documentation/user/refman.itely (Balloon help): document balloon
	help

2004-01-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/document-backend.scm (check-dangling-properties): Grob
	properties are defined define-grob-properties.scm.
	
2004-01-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>
	
	* VERSION: release 2.1.12

	* scm/define-grobs.scm (all-grob-descriptions): larger font for
	ChordName

	* scm/new-markup.scm (sub-markup): sup & super: make smaller in
	relation to surroundings.

	* lily/tuplet-bracket.cc (calc_position_and_height): add staff
	Y-extent to the note-extents: stay clear of the staff.

2004-01-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/GNUmakefile
	($(outdir)/lilypond/lilypond.html): posix conforming globs. Link
	iso. copy.

	* stepmake/stepmake/metafont-rules.make: remove --keep-trying.

	* lily/separating-group-spanner.cc (set_spacing_rods): add padding.

	* mf/,scripts/,make/,ly/,scm/: remove AsciiScript remnants.

	* lily/lily-guile.cc (robust_scm2double): new function. Use throughout.
