@@ -140,12 +140,13 @@ fet_beginchar("Brevis notehead", "-1neo_mensural", "mensuralbrevishead")
 	draw_neo_brevis(2 staff_space#);
 fet_endchar;
 
-def draw_neo_mensural_black_head (expr wid) =
+def draw_neo_mensural_black_head (expr wid, height) =
 	save head_width;
 	head_width# = wid;
-	set_char_box (0, head_width#, noteheight#/2, noteheight#/2);
+	set_char_box (0, head_width#, height/2, height/2);
+	
 	charwx := head_width# / 2;
-	charwy := noteheight# / 2;
+	charwy := height / 2;
 
 	y3 = y1 =0;
 	x2 = x4 = (x1 + x3) /2;
@@ -159,8 +160,8 @@ def draw_neo_mensural_black_head (expr wid) =
 	filldraw z1 -- z2 -- z3 -- z4 -- cycle;
 enddef;
 
-def draw_neo_mensural_open_head (expr wid)=
-	draw_neo_mensural_black_head (wid);
+def draw_neo_mensural_open_head (expr wid, height)=
+	draw_neo_mensural_black_head (wid, height);
 	save diamNW, diamSW;
 	diamNW = length (z2 - z1) + blot_diameter;
 	diamSW = length (z4 - z1) + blot_diameter;
@@ -180,22 +181,22 @@ def draw_neo_mensural_open_head (expr wid)=
 enddef;
 
 fet_beginchar("Neo-mensural open head","0neo_mensural","neomensuralsemibrevishead")
-      draw_neo_mensural_open_head (staff_space#);
+      draw_neo_mensural_open_head (staff_space#, noteheight#);
 fet_endchar;
 
 fet_beginchar("Harmonic notehead (Neo-mensural open)","0harmonic","harmonichead")
-	draw_neo_mensural_open_head (staff_space#);
+	draw_neo_mensural_open_head (1.3 staff_space#, 1.3 noteheight#);
 	charwx := head_width#;
 	charwy := 0;
 fet_endchar;
 
 
 fet_beginchar("Neo-mensural open head","1neo_mensural","neomensuralminimahead")
-      draw_neo_mensural_open_head (staff_space#);
+      draw_neo_mensural_open_head (staff_space#, noteheight#);
 fet_endchar;
 
 fet_beginchar("Neo-mensural black head","2neo_mensural","neomensuralsemiminimahead")
-      draw_neo_mensural_black_head (staff_space#);
+      draw_neo_mensural_black_head (staff_space#, noteheight#);
 fet_endchar;
 
 
